src/app/globals.css
@import 'tailwindcss';

@plugin 'tailwindcss-animate';

@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';

@custom-variant dark (&:where(.dark, .dark *));
@plugin '../plugins/hero.ts';
@custom-variant dark (&:is(.dark *));

@theme {
  --color-background: var(--background);
  --color-foreground: var(--foreground);

  --font-Si-yuan-song-ti:
    SiYuanSongTi, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-Fang-zheng-kai-ti:
    FangZhengKaiTi, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-Si-yuan-hei-ti:
    SiYuanHeiTi, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-Xia-lu-zhen-kai:
    XiaLuZhenKai, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-Han-zi-pin-yin:
    HanZiPinYin, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-Jiang-cheng-yuan-ti:
    JiangChengYuanTi, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-Comfortaa:
    Comfortaa, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-Frederickathe-great:
    FrederickatheGreat, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-Roboto-slab:
    RobotoSlab, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-Merienda:
    Merienda, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-Comic-neue-angular:
    ComicNeueAngular, ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji';
  --font-LXGW-wen-kai-mono-gb:
    LXGWWenKaiMonoGB, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
    'Courier New', monospace;
}

/*
  The default border color has changed to `currentcolor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentcolor);
  }

  .font-lxgw {
    font-family: var(--font-LXGW-wen-kai-mono-gb);
  }
}

@utility text-balance {
  text-wrap: balance;
}

@layer utilities {
  :root {
    --foreground-rgb: 0, 0, 0;
    --background-start-rgb: 255, 255, 255;
    --background-end-rgb: 255, 255, 255;
  }

  @media (prefers-color-scheme: dark) {
    :root {
      --foreground-rgb: 255, 255, 255;
      --background-start-rgb: 0, 0, 0;
      --background-end-rgb: 0, 0, 0;
    }
  }
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;
    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;
    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;
    --muted: 0 0% 96.1%;
    --muted-foreground: 0 0% 45.1%;
    --accent: 0 0% 96.1%;
    --accent-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
  }

  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
}

@layer base {
  body {
    @apply bg-background text-foreground;
  }
}

@layer base {
  @font-face {
    font-family: 'SiYuanSongTi';
    font-style: normal;
    src: url(/fonts/Chinese/SourceHanSerifCN-Medium-6.otf) format('opentype');
  }

  @font-face {
    font-family: 'FangZhengKaiTi';
    font-style: normal;
    src: url(/fonts/Chinese/FangZhengKaiTiJianTi-1.ttf) format('truetype');
  }

  @font-face {
    font-family: 'SiYuanHeiTi';
    font-style: normal;
    src: url(/fonts/Chinese/SourceHanSansSC-Normal-2.otf) format('opentype');
  }

  @font-face {
    font-family: 'XiaLuZhenKai';
    font-style: normal;
    src: url(/fonts/Chinese/XiaLuZhenKai.ttf) format('truetype');
  }

  @font-face {
    font-family: 'HanZiPinYin';
    font-style: normal;
    src: url(/fonts/Chinese/HanZiPinYin.ttf) format('truetype');
  }

  @font-face {
    font-family: 'JiangChengYuanTi';
    font-style: normal;
    src: url(/fonts/Chinese/JiangChengYuanTi.ttf) format('truetype');
  }

  @font-face {
    font-family: 'Comfortaa';
    font-style: normal;
    src: url(/fonts/English/Comfortaa-Medium.ttf) format('truetype');
  }

  @font-face {
    font-family: 'FrederickatheGreat';
    font-style: normal;
    src: url(/fonts/English/FrederickatheGreat.ttf) format('truetype');
  }

  @font-face {
    font-family: 'RobotoSlab';
    font-style: normal;
    src: url(/fonts/English/RobotoSlab-Medium.ttf) format('truetype');
  }

  @font-face {
    font-family: 'Merienda';
    font-style: normal;
    src: url(/fonts/English/Merienda-Regular.ttf) format('truetype');
  }

  @font-face {
    font-family: 'ComicNeueAngular';
    font-style: normal;
    src: url(/fonts/English/ComicNeueAngular-Regular.ttf) format('truetype');
  }

  @font-face {
    font-family: 'LXGWWenKaiMonoGB';
    font-style: normal;
    src: url(/fonts/Chinese/LXGWWenKaiMonoGB-Medium.ttf) format('truetype');
  }
}

